[package]
name = "jxl-winthumb"
version = "0.1.19"
authors = ["Kagami Sascha Rosylight <saschanaz@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-logging = "2.0.2"
log = "0.4.17"
kagamijxl = "0.3.3"
winreg = "0.10.1"

[dependencies.windows]
version = "0.37.0"
features = [
  "alloc",
  "implement",
  "Win32_Graphics_Imaging",
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
]
