[package]
name = "jxl-winthumb"
version = "0.2.3"
authors = ["Kagami Sascha Rosylight <saschanaz@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-logging = "2.0.2"
log = "0.4.17"
winreg = "0.10.1"
jxl-oxide = "0.4.0"

[dependencies.windows]
version = "0.44.0"
features = [
  "implement",
  "Win32_Graphics_Imaging",
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
]
