[package]
name = "jxl-winthumb"
version = "0.2.8"
authors = ["Kagami Sascha Rosylight <saschanaz@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-logging = "2.0.2"
log = "0.4.22"
windows-core = "0.58.0"
winreg = "0.52.0"
jxl-oxide = "0.9.1"

[dependencies.windows]
version = "0.58.0"
features = [
  "implement",
  "Win32_Graphics_Imaging",
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[build-dependencies]
winresource = "0.1.17"
